--- a/jobs/influxdb/templates/config/influxdb.conf.erb
+++ b/jobs/influxdb/templates/config/influxdb.conf.erb
@@ -212,10 +212,10 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
   bind-address = "<%= ":#{p('influxdb.http.port')}" %>"
 
   # Determines whether HTTP authentication is enabled.
-  # auth-enabled = false
+  auth-enabled = true
 
   # The default realm sent back when issuing a basic auth challenge.
-  # realm = "InfluxDB"
+  realm = "<%= p("influxdb.http.basic_auth_realm") %>"
 
   # Determines whether HTTP request logging is enable.d
   # log-enabled = true
