--- a/jobs/influxdb/templates/config/influxdb.conf.erb
+++ b/jobs/influxdb/templates/config/influxdb.conf.erb
@@ -1,8 +1,8 @@
 ### Welcome to the InfluxDB configuration file.
 
 # The values in this file override the default values used by the system if
-# a config option is not specified.  The commented out lines are the the configuration
-# field and the default value used.  Uncommentting a line and changing the value
+# a config option is not specified. The commented out lines are the configuration
+# field and the default value used. Uncommenting a line and changing the value
 # will change the value used at runtime when the process is restarted.
 
 # Once every 24 hours InfluxDB will report usage data to usage.influxdata.com
@@ -11,10 +11,8 @@
 # Change this option to true to disable reporting.
 reporting-disabled = true
 
-# we'll try to get the hostname automatically, but if it the os returns something
-# that isn't resolvable by other servers in the cluster, use this option to
-# manually set the hostname
-hostname = "<%= spec.networks.to_h.values.first.ip %>"
+# Bind address to use for the RPC service for backup and restore.
+# bind-address = "127.0.0.1:8088"
 
 ###
 ### [meta]
@@ -49,6 +47,18 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
   # The directory where the TSM storage engine stores WAL files.
   wal-dir = "<%= p('influxdb.data.wal-dir') %>"
 
+  # The amount of time that a write will wait before fsyncing.  A duration
+  # greater than 0 can be used to batch up multiple fsync calls.  This is useful for slower
+  # disks or when WAL write contention is seen.  A value of 0s fsyncs every write to the WAL.
+  # Values in the range of 0-100ms are recommended for non-SSD disks.
+  # wal-fsync-delay = "0s"
+
+
+  # The type of shard index to use for new shards.  The default is an in-memory index that is
+  # recreated at startup.  A value of "tsi1" will use a disk based index that supports higher
+  # cardinality datasets.
+  # index-version = "inmem"
+
   # Trace logging provides more verbose output around the tsm engine. Turning
   # this on can provide more useful output for debugging tsm engine issues.
   # trace-logging-enabled = false
@@ -61,11 +71,15 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
 
   # CacheMaxMemorySize is the maximum size a shard's cache can
   # reach before it starts rejecting writes.
-  # cache-max-memory-size = 1048576000
+  # Valid size suffixes are k, m, or g (case insensitive, 1024 = 1k).
+  # Vaues without a size suffix are in bytes.
+  # cache-max-memory-size = "1g"
 
   # CacheSnapshotMemorySize is the size at which the engine will
   # snapshot the cache and write it to a TSM file, freeing up memory
-  # cache-snapshot-memory-size = 26214400
+  # Valid size suffixes are k, m, or g (case insensitive, 1024 = 1k).
+  # Values without a size suffix are in bytes.
+  # cache-snapshot-memory-size = "25m"
 
   # CacheSnapshotWriteColdDuration is the length of time at
   # which the engine will snapshot the cache and write it to
@@ -76,6 +90,12 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
   # will compact all TSM files in a shard if it hasn't received a
   # write or delete
   # compact-full-write-cold-duration = "4h"
+
+  # The maximum number of concurrent full and level compactions that can run at one time.  A
+  # value of 0 results in 50% of runtime.GOMAXPROCS(0) used at runtime.  Any number greater
+  # than 0 limits compactions to that value.  This setting does not apply
+  # to cache snapshotting.
+  # max-concurrent-compactions = 0
 
   # The maximum series allowed per database before writes are dropped.  This limit can prevent
   # high cardinality issues at the database level.  This limit can be disabled by setting it to
@@ -106,22 +126,20 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
   # can help prevent run away queries.  Setting the value to 0 disables the limit.
   query-timeout = "<%= p('influxdb.coordinator.query-timeout') %>"
 
-  # The the time threshold when a query will be logged as a slow query.  This limit can be set to help
+  # The time threshold when a query will be logged as a slow query.  This limit can be set to help
   # discover slow or resource intensive queries.  Setting the value to 0 disables the slow query logging.
   log-queries-after = "<%= p('influxdb.coordinator.log-queries-after') %>"
 
-  # The maximum number of points a SELECT can process.  A value of 0 will make the maximum
-  # point count unlimited.
+  # The maximum number of points a SELECT can process.  A value of 0 will make
+  # the maximum point count unlimited.  This will only be checked every second so queries will not
+  # be aborted immediately when hitting the limit.
   # max-select-point = 0
 
   # The maximum number of series a SELECT can run.  A value of 0 will make the maximum series
   # count unlimited.
-
-  # The maximum number of series a SELECT can run. A value of zero will make the maximum series
-  # count unlimited.
   # max-select-series = 0
 
-  # The maxium number of group by time bucket a SELECt can create.  A value of zero will max the maximum
+  # The maxium number of group by time bucket a SELECT can create.  A value of zero will max the maximum
   # number of buckets unlimited.
   # max-select-buckets = 0
 
@@ -132,8 +150,8 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
 ###
 
 [retention]
-  # Determines whether retention policy enforcment enabled.
-  enabled = true
+  # Determines whether retention policy enforcement enabled.
+  # enabled = true
 
   # The interval of time when retention policy enforcement checks run.
   # check-interval = "30m"
@@ -148,7 +166,7 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
 
 [shard-precreation]
   # Determines whether shard pre-creation service is enabled.
-  enabled = true
+  # enabled = true
 
   # The interval of time when the check to pre-create new shards runs.
   # check-interval = "10m"
@@ -168,34 +186,13 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
 
 [monitor]
   # Whether to record statistics internally.
-  store-enabled = true
+  # store-enabled = true
 
   # The destination database for recorded statistics
   # store-database = "_internal"
 
   # The interval at which to record statistics
   # store-interval = "10s"
-
-###
-### [admin]
-###
-### Controls the availability of the built-in, web-based admin interface. If HTTPS is
-### enabled for the admin interface, HTTPS must also be enabled on the [http] service.
-###
-### NOTE: This interface is deprecated as of 1.1.0 and will be removed in a future release.
-
-[admin]
-  # Determines whether the admin service is enabled.
-  enabled = <%= p('influxdb.admin.enabled') %>
-
-  # The default bind address used by the admin service.
-  # bind-address = ":8083"
-
-  # Whether the admin service should use HTTPS.
-  # https-enabled = false
-
-  # The SSL certificate used when HTTPS is enabled.
-  # https-certificate = "/etc/ssl/influxdb.pem"
 
 ###
 ### [http]
@@ -217,7 +214,7 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
   # The default realm sent back when issuing a basic auth challenge.
   realm = "<%= p("influxdb.http.basic_auth_realm") %>"
 
-  # Determines whether HTTP request logging is enable.d
+  # Determines whether HTTP request logging is enabled.
   # log-enabled = true
 
   # Determines whether detailed write logging is enabled.
@@ -237,10 +234,10 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
   # https-private-key = ""
 
   # The JWT auth shared secret to validate requests using JSON web tokens.
-  # shared-sercret = ""
+  # shared-secret = ""
 
   # The default chunk size for result sets that should be chunked.
-  # max-row-limit = 10000
+  # max-row-limit = 0
 
   # The maximum number of HTTP connections that may be open at once.  New connections that
   # would exceed this limit are dropped.  Setting this value to 0 disables the limit.
@@ -252,6 +249,27 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
   # The path of the unix domain socket.
   # bind-socket = "/var/run/influxdb.sock"
 
+  # The maximum size of a client request body, in bytes. Setting this value to 0 disables the limit.
+  # max-body-size = 25000000
+
+
+###
+### [ifql]
+###
+### Configures the ifql RPC API.
+###
+
+[ifql]
+  # Determines whether the RPC service is enabled.
+  # enabled = true
+
+  # Determines whether additional logging is enabled.
+  # log-enabled = true
+
+  # The bind address used by the ifql RPC service.
+  # bind-address = ":8082"
+
+
 ###
 ### [subscriber]
 ###
@@ -261,7 +279,7 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
 
 [subscriber]
   # Determines whether the subscriber service is enabled.
-  enabled = true
+  # enabled = true
 
   # The default timeout for HTTP writes to subscribers.
   # http-timeout = "30s"
@@ -336,11 +354,17 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
 ###
 
 [[collectd]]
-  enabled = false
+  # enabled = false
   # bind-address = ":25826"
   # database = "collectd"
   # retention-policy = ""
-  # typesdb = "/usr/share/collectd/types.db"
+  #
+  # The collectd service supports either scanning a directory for multiple types
+  # db files, or specifying a single db file.
+  # typesdb = "/usr/local/share/collectd"
+  #
+  # security-level = "none"
+  # auth-file = "/etc/collectd/auth_file"
 
   # These next lines control how batching works. You should have this enabled
   # otherwise you could get dropped metrics or poor performance. Batching
@@ -358,6 +382,11 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
   # UDP Read buffer size, 0 means OS default. UDP listener will fail if set above OS max.
   # read-buffer = 0
 
+  # Multi-value plugins can be handled two ways.
+  # "split" will parse and store the multi-value plugin data into separate measurements
+  # "join" will parse and store the multi-value plugin as a single multi-value measurement.
+  # "split" is the default behavior for backward compatability with previous versions of influxdb.
+  # parse-multivalue-plugin = "split"
 ###
 ### [opentsdb]
 ###
@@ -365,7 +394,7 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
 ###
 
 [[opentsdb]]
-  enabled = false
+  # enabled = false
   # bind-address = ":4242"
   # database = "opentsdb"
   # retention-policy = ""
@@ -396,7 +425,7 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
 ###
 
 [[udp]]
-  enabled = false
+  # enabled = false
   # bind-address = ":8089"
   # database = "udp"
   # retention-policy = ""
@@ -424,11 +453,14 @@ hostname = "<%= spec.networks.to_h.values.first.ip %>"
 ###
 
 [continuous_queries]
-  # Determiens whether the continuous query service is enabled.
-  enabled = true
+  # Determines whether the continuous query service is enabled.
+  # enabled = true
 
   # Controls whether queries are logged when executed by the CQ service.
   # log-enabled = true
+
+  # Controls whether queries are logged to the self-monitoring data store.
+  # query-stats-enabled = false
 
   # interval for how often continuous queries will be checked if they need to run
   # run-interval = "1s"
